theme-adium: use the pending-message-id instead of message-token in x-empathy-message-id

message-token is not guaranteed to be implemented by all CMs while
pending-message-id is (for incoming messages).

https://bugzilla.gnome.org/show_bug.cgi?id=654015